@@ -55,8 +55,8 @@ static void sqr(int& a_)
 }
 void ForeachTest::foreach1()
 {
-  vector <int> v1(10);
-  for(size_t i = 0; i < v1.size(); i++)
+  vector<int> v1(10);
+  for (int i = 0; (size_t)i < v1.size(); ++i)
     v1[i] = i;
   for_each(v1.begin(), v1.end(), ptr_fun(sqr) );
 
