@@ -47,16 +47,15 @@ void IncludesTest::incl1()
 {
   vector<int> v1(10);
   vector<int> v2(3);
-  size_t i;
-  for(i = 0; i < v1.size(); i++)
-  {
+  int i;
+  for (i = 0; (size_t)i < v1.size(); ++i) {
     v1[i] = i;
   }
 
   bool r1=includes(v1.begin(), v1.end(), v2.begin(), v2.end());
   CPPUNIT_ASSERT(!r1);
 
-  for(i = 0; i < v2.size(); i++)
+  for (i = 0; (size_t)i < v2.size(); ++i)
     v2[i] = i + 3;
 
   bool r2=includes(v1.begin(), v1.end(), v2.begin(), v2.end());
@@ -68,8 +67,7 @@ char* names[] = {  "Todd", "Mike", "Graham", "Jack", "Brett"};
 
   const unsigned nameSize = sizeof(names)/sizeof(names[0]);
   vector <char*> v1(nameSize);
-  for(size_t i = 0; i < v1.size(); i++)
-  {
+  for (int i = 0; (size_t)i < v1.size(); ++i) {
     v1[i] = names[i];
   }
   vector <char*> v2(2);
