@@ -24,13 +24,11 @@ protected:
   void inprod1();
   void inprod2();
 
-  static int add(int a_, int b_)
-  {
+  static size_t add(size_t a_, size_t b_) {
     return a_ + b_;
   }
 
-  static int mult(int a_, int b_)
-  {
+  static size_t mult(size_t a_, size_t b_) {
     return a_ * b_;
   }
 };
@@ -51,26 +49,24 @@ void InnerprodTest::inprod0()
 }
 void InnerprodTest::inprod1()
 {
-  vector <int> v1(3);
-  vector <int> v2(v1.size());
-  for(size_t i = 0; i < v1.size(); i++)
-  {
+  vector<size_t> v1(3);
+  vector<size_t> v2(v1.size());
+  for (size_t i = 0; i < v1.size(); ++i) {
     v1[i] = i + 1;
     v2[i] = v1.size() - i;
   }
-  int result = inner_product(v1.begin(), v1.end(), v2.begin(), 0);
-  CPPUNIT_ASSERT(result==10);
+  size_t result = inner_product(v1.begin(), v1.end(), v2.begin(), (size_t)0);
+  CPPUNIT_ASSERT(result == 10);
 }
 void InnerprodTest::inprod2()
 {
-  vector <int> v1(3);
-  vector <int> v2(v1.size());
-  for(size_t i = 0; i < v1.size(); i++)
-  {
+  vector<size_t> v1(3);
+  vector<size_t> v2(v1.size());
+  for(size_t i = 0; i < v1.size(); ++i) {
     v1[i] = i + 1;
     v2[i] = v1.size() - i;
   }
-  int result=inner_product(v1.begin(), v1.end(), v2.begin(), 1, mult, add);
+  size_t result=inner_product(v1.begin(), v1.end(), v2.begin(), 1, mult, add);
 
-  CPPUNIT_ASSERT(result==64);
+  CPPUNIT_ASSERT(result == 64);
 }
